# ds-u2-actividad-1-listasenlazadassimples-SofiCano

./: .gitignore  CMakeLists.txt  README.md  compilar.bat
arduino/: sensor_simulator.ino
include/: ListaGeneral.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SerialReader.h
src/: main.cpp
